--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
-    "react-router-dom": "^6.21.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.21.3"
   }
 }
