--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "gsap-trial": "^3.12.4",
     "loaders.css": "^0.1.2",
+    "mdb-react-ui-kit": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
